--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -104,6 +104,9 @@ html, body {
 
   .logo {
     margin-bottom: $logo-margin;
+    width: 100px;
+    margin-left: 65px;
+    margin-top: 20px;
   }
 
   .search-results {
